--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         overflow: hidden;
         touch-action: none;
         -webkit-tap-highlight-color: transparent;
+        overscroll-behavior: none;
       }
       
       h1, h2, h3, .mafia-font {
@@ -27,7 +28,7 @@
         transform: translateZ(0); /* Hardware accelerate container */
       }
     </style>
-  <script type="importmap">
+<script type="importmap">
 {
   "imports": {
     "react/": "https://aistudiocdn.com/react@^19.2.0/",
@@ -39,5 +40,6 @@
 </head>
   <body>
     <div id="root"></div>
+    <script type="module" src="./index.tsx"></script>
   </body>
 </html>
