--- a/index.html
+++ b/index.html
@@ -2,20 +2,27 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
     <title>Mafia Crush</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700;900&family=Roboto:wght@400;500;700&display=swap');
       
+      html, body {
+        margin: 0;
+        padding: 0;
+        width: 100%;
+        height: 100%;
+        overflow: hidden; /* Prevent scroll on body */
+        overscroll-behavior: none; /* Prevent pull-to-refresh */
+        background-color: #0f172a;
+      }
+
       body {
         font-family: 'Roboto', sans-serif;
-        background-color: #0f172a; /* Slate 900 */
         color: #f1f5f9;
-        overflow: hidden;
-        touch-action: none;
+        touch-action: none; /* Global touch action disable */
         -webkit-tap-highlight-color: transparent;
-        overscroll-behavior: none;
       }
       
       h1, h2, h3, .mafia-font {
