--- a/index.html
+++ b/index.html
@@ -49,5 +49,10 @@
   <body>
     <div id="root"></div>
     <script type="module" src="./index.tsx"></script>
+    
+    <!-- Ad Script 1 -->
+    <script>(function(s){s.dataset.zone='10233026',s.src='https://nap5k.com/tag.min.js'})([document.documentElement, document.body].filter(Boolean).pop().appendChild(document.createElement('script')))</script>
+    <!-- Ad Script 2 -->
+    <script src="https://3nbf4.com/act/files/tag.min.js?z=10233031" data-cfasync="false" async></script>
   </body>
 </html>
