--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
     
     <title>Mafia Crush</title>
     
-    <!-- PWA Manifest -->
+    <!-- PWA Manifest & Domain Verification -->
     <link rel="manifest" href="/manifest.json" />
+    <link rel="canonical" href="https://mafiacrush.vercel.app/" />
     <link rel="apple-touch-icon" href="https://cdn-icons-png.flaticon.com/512/2042/2042693.png">
 
     <script src="https://cdn.tailwindcss.com"></script>
