--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="./index.tsx"></script>
+    <script type="module" src="./index.tsx" crossorigin="anonymous"></script>
     
     <script>
       if ('serviceWorker' in navigator) {
