feat: Update PWA configuration for Vercel deployment
Update manifest and service worker to use absolute URLs for assets and cache entries. This ensures correct PWA behavior and offline support when deployed to Vercel.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <title>Mafia Crush</title>
     
     <!-- PWA Manifest & Domain Verification -->
-    <link rel="manifest" href="/manifest.json" />
+    <link rel="manifest" href="https://mafiacrush.vercel.app/manifest.json" />
     <link rel="canonical" href="https://mafiacrush.vercel.app/" />
     <link rel="apple-touch-icon" href="https://cdn-icons-png.flaticon.com/512/2042/2042693.png">
 
